[tool.poetry]
name = "custom-ansible-module"
version = "0.1.0"
description = ""
authors = ["Alexander Foley <alexandergfoley@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
ansible = "8.6.1"
pythonping = "^1.1.4"
requests = "^2.31.0"
black = "^23.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
